startup edit done

--- a/Registration.html
+++ b/Registration.html
@@ -160,7 +160,7 @@
                         </div>
                         <div class="wow fadeInUp" data-wow-delay="0.3s">
 
-                           
+
                             <form id="ft-form" class="form" accept-charset="UTF-8" enctype="multipart/form-data">
 
 
@@ -186,37 +186,38 @@
                                         <div class="two-cols">
                                             <label>
                                                 Email address * [can't change]
-                                                <input type="email" name="email" id="mentorEmail" required readonly>
+                                                <input type="email" name="emailMentor" id="mentorEmail" required
+                                                    readonly>
                                             </label>
                                             <label>
                                                 Phone *
-                                                <input type="tel" name="Phone" required>
+                                                <input type="tel" name="PhoneMentor" required>
                                             </label>
                                         </div>
                                         <div class="two-cols">
                                             <label>
                                                 State
-                                                <input type="text" name="Citizenship">
+                                                <input type="text" name="CitizenshipMentor">
                                             </label>
                                             <label>
                                                 City
-                                                <input type="text" name="City">
+                                                <input type="text" name="CityMentor">
                                             </label>
                                         </div>
                                         <div class="two-cols">
 
                                             <label>
                                                 Linkedin URL *
-                                                <input type="text" name="Linkedin URL" required>
+                                                <input type="text" name="LinkedinURLMentor" required>
                                             </label>
                                             <label>
                                                 Number of active Months *
-                                                <input type="tel" name="activeMonths" required>
+                                                <input type="tel" name="ActiveMonthsMentor" required>
                                             </label>
                                         </div>
                                         <label>
                                             Brief about you*
-                                            <input type="text" name="Brief" required>
+                                            <input type="text" name="BriefMentor" required>
                                         </label>
                                         <div class="two-cols">
 
@@ -315,46 +316,46 @@
                                         <div class="two-cols">
                                             <label>
                                                 StartUp Email address * [can't change]
-                                                <input type="email" name="email" id="startupUserEmail" required>
+                                                <input type="email" name="email_StartUp" id="startupUserEmail" required>
                                             </label>
 
                                             <label>
                                                 Phone *
-                                                <input type="tel" name="sturtupPhone" required>
+                                                <input type="tel" name="phone_StartUp" required>
                                             </label>
                                         </div>
                                         <div class="two-cols">
                                             <label>
                                                 Registered State
-                                                <input type="text" name="Citizenship">
+                                                <input type="text" name="Citizenship_StartUp">
                                             </label>
                                             <label>
                                                 Registered City
-                                                <input type="text" name="City">
+                                                <input type="text" name="City_StartUp">
                                             </label>
                                         </div>
                                         <label>
                                             Company URL
-                                            <input type="text" name="Address">
+                                            <input type="text" name="Address_StartUp">
                                         </label>
                                         <div class="two-cols">
 
                                             <label>
                                                 Industry *
-                                                <input type="text" name="Industry" required>
+                                                <input type="text" name="Industry_StartUp" required>
                                             </label>
                                             <label>
                                                 Sector *
-                                                <input type="text" name="Sector" required>
+                                                <input type="text" name="Sector_StartUp" required>
                                             </label>
                                         </div>
                                         <label>
                                             Services *
-                                            <input type="text" name="Services" required>
+                                            <input type="text" name="Services_StartUp" required>
                                         </label>
                                         <label>
                                             MSME Certificate Number
-                                            <input type="text" name="Certificate">
+                                            <input type="text" name="Certificate_StartUp">
                                         </label>
                                         <label>
                                             Profile Picture
@@ -363,12 +364,12 @@
 
                                         <div class="two-cols">
                                             <label for="cars">Is this Company logo</label>
-                                            <select name="logo" id="cars">
+                                            <select name="logo_StartUp" id="cars">
                                                 <option value="no">No</option>
                                                 <option value="yes">Yes</option>
                                             </select>
                                             <label for="cars">Stage of Startup *</label>
-                                            <select name="Stage" id="cars" required>
+                                            <select name="Stage_StartUp" id="cars" required>
                                                 <option value="ideation">ideation</option>
                                                 <option value="validation">validation</option>
                                                 <option value="early traction">Early Traction</option>
@@ -376,13 +377,13 @@
                                             </select>
                                         </div>
                                         <label for="cars">Nature Of the Entity</label>
-                                        <select name="NatureOfEntity" id="cars">
+                                        <select name="NatureOfEntity_StartUp" id="cars">
                                             <option value="no">Private Limited Company</option>
                                             <option value="yes">Limited Liability Partnership</option>
                                             <option value="yes">Registered Partnership</option>
                                         </select>
                                         <label for="cars">Funded / Bootstrapped</label>
-                                        <select name="Money Source" id="cars">
+                                        <select name="Money_StartUp Source" id="cars">
                                             <option value="funded">Funded</option>
                                             <option value="bootstrapped">Bootstrapped</option>
                                         </select>
@@ -390,19 +391,19 @@
 
                                             <label>
                                                 CIN
-                                                <input type="text" name="CIN">
+                                                <input type="text" name="CIN_StartUp">
                                             </label>
                                             <label>
                                                 PAN
-                                                <input type="text" name="PAN">
+                                                <input type="text" name="PAN_StartUp">
                                             </label>
                                         </div>
                                         <label>
                                             Brief about Startup *
-                                            <input type="text" name="Brief" required>
+                                            <input type="text" name="Brief_StartUp" required>
                                         </label>
                                         <label for="cars">You Are Intrested In * </label>
-                                        <select name="Interests" id="cars" required>
+                                        <select name="Interests_StartUp" id="cars" required>
                                             <option value="All">All</option>
                                             <option value="Mentors">Mentors</option>
                                             <option value="Incubators">Incubators</option>
@@ -413,7 +414,7 @@
                                     </fieldset>
 
                                     <div class="btns">
-                                        <!-- <input type="text" name="_gotcha" value="" style="display:none;"> -->
+
                                         <input type="submit" value="Submit application">
                                     </div>
                                 </div>
